correction z-index

--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -53,7 +53,7 @@
     inset: 0;
     background-image: repeating-linear-gradient(45deg, var(--pattern-color) 0, var(--pattern-color) 1px, transparent 0, transparent 50%);
     background-size: var(--pattern-size) var(--pattern-size);
-    z-index: -1;
+    z-index: -2;
 }
 #main-wrap.page-template .main-header{
     height: auto;
